<resources>
    <string name="app_name">BabyCreator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="log_in_button">SIGN IN</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hint_login_username">Username</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="sign_up_error_message">Please make sure you enter username, password and email address!</string>
    <string name="check_email_sign_up_message">Checking if the email address is already in use</string>
    <string name="email_in_use">This email is already in use</string>
    <string name="error_unable_to_sign_in">You were unable to sign in. Please try again</string>
    <string name="signing_in_message">Signing in...</string>
    <string name="error_user_registered_but_unable_to_log_in">The user was successfully created but you were unable to log in due to a server error. Please try again</string>
    <string name="ok">OK</string>
    <string name="choose_date_of_birth">Choose your date of birth</string>
    <string name="login_error_title">Oops!</string>
    <string name="general_login_error_message">Login unsuccessful, please try again.</string>
    <string name="login_error_message">Please make sure you enter email and password!</string>
    <string name="progress_sign_in_message">Signing in, please wait.</string>
    <string name="invalid_login_details_dialog">The email or password you entered were invalid.</string>
    <string name="try_again">Try again</string>
    <string name="forgot_your_password">Forgot my password</string>
    <string name="email_for_password_recovery_message">Enter your email and we will send you instructions how to recover your password</string>
    <string name="recovery_email_sent_dialog">We sent you an email with instructions how to recover your password</string>
    <string name="email_not_found">User with this email address does not exist</string>
    <string name="general_server_error">Sorry, there was a server error</string>
    <string name="cancel">Cancel</string>
    <string name="sexy_status_not_set_female">has not updated her sexy status</string>
    <string name="sexy_status_not_set_male">has not updated his sexy status</string>
    <string name="period_bleeding">Be patient</string>
    <string name="period_follicular_phase">Start trying for a baby</string>
    <string name="period_ovulation">Go ahead, make your baby</string>
    <string name="period_luteal">Keep trying, last chance!</string>
    <string name="sexyCalendar_needs_updating_message">Baby Calendar needs to be updated</string>
    <string name="sexyCalendar_error_message">Sorry, there is a Baby Calendar error</string>
    <string name="empty_sexy_status">Enter your status first</string>
    <string name="saving_message">Saving...</string>
    <string name="sexy_status_saved_message">Your sexy status was saved</string>
    <string name="general_error_title">Oops!</string>
    <string name="error_updating_status">Error updating your status. Please try again.</string>
    <string name="calendar_saved">Your Baby Calendar update was saved</string>
    <string name="error_sending_calendar_updates">Sorry, there was an error sending the Baby Calendar update</string>
    <string name="sending_sexy_calendar_update_to_partners_dialog_message">Sending Baby Calendar update</string>
    <string name="message_does_not_share_private_days">Does not want to share her baby days</string>
    <string name="change_sexy_status_hint">Tell your partner how you feel</string>
    <string name="share_sexy_calendar_checkbox">Share your Baby Calendar with your partner(s)</string>
    <string name="fragment_love_days_generic_title">Please update your baby days to start using all of BabyCreator\'s functions</string>
    <string name="sexy_status_default">Tap to change your status</string>
    <string name="title_activity_sexy_calendar">Baby Calendar</string>
    <string name="show_private_days_dialog_button">Baby Days</string>
    <string name="logout_menu_title">Logout</string>
    <string name="menu_camera_alertdialog_title">Change your profile picture</string>
    <string name="camera_choice_take_pic">Take a picture</string>
    <string name="camera_choice_choose_pic">Choose a picture from your gallery</string>
    <string name="error_loading_thumbnail">Error loading the thumbnail image</string>
    <string name="error_selected_file">There was a problem with the selected file.</string>
    <string name="uploading_file_message">Uploading file...</string>
    <string name="profile_pic_uploaded_successfully">Your profile picture was uploaded</string>
    <string name="error_associating_profile_pic_with_profile">Error associating the picture with your profile</string>
    <string name="error_uploading_profile_pic">Error uploading your profile picture</string>
    <string name="error_message_toast_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error_message">Sorry, there was an error</string>
    <string name="search_partners_tab">Search</string>
    <string name="requests_partners_tab">Requests</string>
    <string name="existing_partners_tab">Partners</string>
    <string name="toast_update_partners_no_partners_found">You have no partners</string>
    <string name="toast_update_partners">Your partners were updated</string>
    <string name="no_partners_found">No partners were found</string>
    <string name="no_pending_partner_requests_message">You have no pending partner requests. Swipe down to refresh.</string>
    <string name="hint_search_partner_by_email">Search partner by email</string>
    <string name="empty_search_field_message">Please enter a valid email address</string>
    <string name="dialog_invite_partner_join_babycreator_title">Invite your loved one to join BabyCreator</string>
    <string name="dialog_message_partner_not_joined_babycreator">You partner is not using BabyCreator. Do you want to send an invitation by email?</string>
    <string name="email_invite_to_babycreator_subject">Join me in BabyCreator</string>
    <string name="email_invite_to_babycreator_body">Hi honey, \n \n
        Join me in BabyCreator! Just download BabyCreator from the Google Play or click on the link below.
        I am waiting for you... :)
         </string>
    <string name="toast_no_email_clients_installed">"There are no email clients installed."</string>
    <string name="dialog_box_deleting_partner">Are you breaking up?</string>
    <string name="dialog_delete_partner_yes_button">Yes</string>
    <string name="dialog_delete_partner_general_message">Are you sure you want to break up?</string>
    <string name="dialog_delete_partner_no_button">No</string>
    <string name="dialog_delete_partner_confirmation">Are you sure you want to beak up with</string>
    <string name="existing_partner_deleted">Partner was deleted</string>
    <string name="toast_cannot_add_yourself_as_partner">You can\'t add yourself as partner</string>
    <string name="user_already_partner">is already your partner</string>
    <string name="dialog_partner_request_already_sent_title">Waiting for love</string>
    <string name="dialog_partner_request_already_sent_to_user_message">You have already sent a love request to</string>
    <string name="partner_request_sent_toast">Your partner request was sent</string>
    <string name="partner_request_not_sent_toast">Your partner request was not sent. Please try again.</string>
    <string name="new_partner_added_successfully">Partner was added</string>
    <string name="dialog_menu_title">Are you a guy or a girl?</string>
    <string name="guy">Guy</string>
    <string name="girl">Girl</string>
    <string name="saving_preferences_message">Saving your preferences...</string>
    <string name="selection_saved_successfully">Your selection was saved</string>
    <string name="selection_not_saved">Your selection was not saved due to a server problem </string>
    <string name="messaged_successfully_saved_to_server">Your selection was saved</string>
    <string name="messaged_unsuccessfully_saved_to_server">There was a server error and your selection was not saved. Please try again later.</string>
    <string name="change_password_dialog_title">Change your password</string>
    <string name="enter_new_password_message">Enter new password</string>
    <string name="confirm_password_message">Confirm password</string>
    <string name="password_empty">Your password can\'t be empty</string>
    <string name="passwords_dont_match">The passwords you entered don\'t match</string>
    <string name="password_changed_toast">Your password was changed</string>
    <string name="password_not_changed_error_toast">Your password was not changed due to a server error</string>
    <string name="dialog_change_username_title">Change your username</string>
    <string name="username_cannot_be_empty">The username cannot be empty</string>
    <string name="toast_username_updated">Your username was updated</string>
    <string name="new_partner_request_push">wants to become your partner</string>
    <string name="new_partner_request">New partner request</string>
    <string name="push_calendar_update">updated her Baby Calendar</string>
    <string name="partner_request_approved">and you are now connected</string>
    <string name="push_sexy_status_updated_female">updated her sexy status</string>
    <string name="push_sexy_status_updated_male">updated his sexy status</string>
    <string name="baby_sign">Baby star counter</string>
    <string name="baby_sign_next_date">1. Next possible date for conceiving</string>
    <string name="baby_sign_next_date_give_birth">2. Next possible date to give birth</string>
    <string name="baby_sign_zodiac">3. The sign of your baby will be</string>
    <string name="baby_next_date_for_conceiving">Next</string>
    <string name="baby_previous_date_for_conceiving">Previous</string>
    <string name="title_baby_star_counter">Based on your current period</string>
    <string name="baby_star_next_previous_buttons_title">Tap on the buttons to check the next possible days you can get pregnant</string>
    <string name="current_dates_to_conceive">1. If you conceive between:</string>
    <string name="current_dates_to_give_birth">2. You will give birth between:</string>
    <string name="next_date_to_conceive">1. You can conceive between:</string>
    <string name="next_date_to_give_birth">2. You will give birth between:</string>
    <string name="sign_of_baby_will_be">3. The sign of your baby will be</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="dialog_no_partners_title">Add a partner</string>
    <string name="dialog_no_partners_message">Invite a partner and begin using BabyCreator</string>
    <string name="label_current_period">Current period:</string>
    <string name="label_your_status">Status:</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_edit_partner">Partners</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="logout_message">Logging out</string>
    <string name="logout_error">Can\'t log out due to a server error</string>
    <string name="title_activity_activity_sexy_calendar">ActivityBabyCalendar</string>
    <string name="refresh_error">Failed to refresh, try again later</string>
    <string name="dialog_title_daily_push_title">You have a message</string>
</resources>