<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding">

    <TextView
        style="@style/DialogWindowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_menu_title" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guy"
        android:id="@+id/radioButtonGuy" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/girl"
        android:id="@+id/radioButtonGirl" />
</LinearLayout>