<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding">

    <TextView
        style="@style/DialogWindowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_camera_alertdialog_title" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_choice_take_pic"
        android:id="@+id/takePicture" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_choice_choose_pic"
        android:id="@+id/choosePicture" />

</LinearLayout>