<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding"
    tools:context="com.victor.sexytalk.sexytalk.CustomDialogs.ChangePassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_dialog_title"
        style="@style/DialogWindowTitle"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/enterPassword"
        android:hint="@string/enter_new_password_message"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPassword"
        android:hint="@string/confirm_password_message"/>
</LinearLayout>
