<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding"
    tools:context="com.victor.sexytalk.sexytalk.CustomDialogs.ForgotPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        style="@style/DialogWindowTitle"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_for_password_recovery_message"
        android:id="@+id/passwordRecoveryMessage" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:paddingTop="@dimen/default_padding"
        android:hint="@string/hint_email"
        android:id="@+id/emailForPasswordRecovery"
        android:layout_weight="0.08" />
</LinearLayout>
