<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/buttons_tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/baby_star_next_previous_buttons_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_previous_date_for_conceiving"
            android:id="@+id/buttonPreviousConceivingDate"
            android:layout_marginRight="@dimen/default_padding"
            style="@style/DefaultButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_next_date_for_conceiving"
            android:id="@+id/buttonNextConceivingDate"
            style="@style/DefaultButton" />

    </LinearLayout>


    <TextView
        android:id="@+id/textViewConceivingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    <TextView
        android:id="@+id/textViewDateGiveBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    <TextView
        android:id="@+id/textViewConceivingSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>