<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_message_female"
            android:text="Love message for the day"
            android:textColor="@color/color_black"
            android:textSize="@dimen/message_title" />

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/card_title"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"

            android:scaleType="fitXY"
            android:src="@mipmap/ic_action_person_black" />

        <TextView
            android:id="@+id/cyclePhase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_title"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/fragment_love_days_generic_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_black"
            android:layout_alignBottom="@+id/profilePicture"
            android:layout_toLeftOf="@+id/profilePicture"
            android:layout_toStartOf="@+id/profilePicture" />

        <TextView
            android:id="@+id/sexyStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePicture"
            android:text="@string/sexy_status_default"
            style="@style/SexyStatus" />

        <Button
            android:id="@+id/showSexyCalendar"
            style="@style/DefaultButton.SmallText"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@+id/sexyStatus"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_button"
            android:layout_marginLeft="@dimen/default_padding"
            android:text="@string/title_activity_sexy_calendar"
            android:layout_marginBottom="@dimen/default_padding"
            android:textAlignment="center" />

        <Button
            android:id="@+id/showPrivateDaysDialog"
            style="@style/DefaultButton.SmallText"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginRight="@dimen/default_padding"
            android:text="@string/show_private_days_dialog_button"
            android:layout_marginBottom="@dimen/default_padding"
            android:layout_alignTop="@+id/showSexyCalendar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
